# convobs-rs

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  Makefile  PERFORMANCE.md  PLAN.md  PORTING-NOTES.md  README.md  STATUS.md  TESTING-PLAN.md
.github/workflows/: ci.yml
cli/: Cargo.toml
cli/src/: error.rs  lib.rs  packetlog.rs  rinex_backend.rs
cli/testdata/: Makefile  README.md  f9t-20251217.ubx  m8t-20251217.ubx  packet-rtcm-20260519.rtcm  um980-rtcm-20260527.rtcm
cli/tests/: golden.rs  raw_detect.rs  seam.rs
cli/tests/common/: mod.rs
docs/: convobs.1.md
examples/: crate_json.rs  diy_check.rs
obsj/: Cargo.toml
obsj/examples/: rinex_roundtrip.rs
obsj/src/: arc.rs  diff.rs  error.rs  freq.rs  json.rs  lib.rs  obs.rs  rinexobs.rs  rtcm.rs  sink.rs  ubx.rs
rinex-obsj/: Cargo.toml
rinex-obsj/src/: lib.rs
src/: cli.rs  crc24q.rs  diff.rs  lib.rs  obs.rs  packetlog.rs  rinexio.rs  rinexobs.rs  rtcm.rs  ubx.rs
