[workspace]
resolver = "2"
members = ["obsj", "rinex-obsj", "cli"]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.96"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
# raw_value lets the reader capture each observation float's exact JSON token and
# round it with Rust's std `f64::from_str` (correctly rounded), so obsj floats
# round-trip bit-exactly in a single parse pass — without serde_json's slower
# arbitrary_precision path, whose correct rounding only applies via `Value`.
serde_json = { version = "1", features = ["raw_value"] }
rtcm-rs = "0.11"
ublox = "0.10"
rinex = { version = "0.22", default-features = false, features = ["obs", "serde"] }
toml = "0.8"
clap = { version = "4", features = ["std"], default-features = false }
flate2 = "1"
# Fast FxHashMap for the tiny per-signal keys; SipHash is overkill here.
rustc-hash = "2"
# SIMD hex decoding for the packet-log hot path.
faster-hex = "0.10"
thiserror = "2"
obsj = { path = "obsj" }
rinex-obsj = { path = "rinex-obsj" }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"
